--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 annotated-types==0.6.0
 anyio==3.7.1
+bcrypt==4.1.2
 certifi==2023.7.22
 click==8.1.7
 dnspython==2.4.2
+ecdsa==0.18.0
 email-validator==2.0.0.post2
 exceptiongroup==1.1.3
 fastapi==0.103.2
@@ -18,15 +20,20 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 orjson==3.9.7
 packaging==23.2
+passlib==1.7.4
 pluggy==1.3.0
+pyasn1==0.5.1
 pydantic==2.4.2
 pydantic-extra-types==2.1.0
 pydantic-settings==2.0.3
 pydantic_core==2.10.1
 pytest==7.4.4
 python-dotenv==1.0.0
+python-jose==3.3.0
 python-multipart==0.0.6
 PyYAML==6.0.1
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.21
 starlette==0.27.0
