--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ annotated-types==0.6.0
 anyio==3.7.1
 bcrypt==4.1.2
 certifi==2023.7.22
+cffi==1.16.0
 click==8.1.7
+cryptography==42.0.2
 dnspython==2.4.2
 ecdsa==0.18.0
 email-validator==2.0.0.post2
@@ -23,6 +25,7 @@ packaging==23.2
 passlib==1.7.4
 pluggy==1.3.0
 pyasn1==0.5.1
+pycparser==2.21
 pydantic==2.4.2
 pydantic-extra-types==2.1.0
 pydantic-settings==2.0.3
